# reconcile-python

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_demo.py
.github/workflows/: ci.yml  publish-pypi.yml
demo/run_all/: run_all.py
demo/scenarios/api-vs-db-graphql/: demo_data.py  scenario.py
demo/scenarios/api-vs-db-rest/: demo_data.py  scenario.py
demo/scenarios/api-vs-db-soap/: demo_data.py  scenario.py
demo/scenarios/api-vs-file-graphql/: demo_data.py  scenario.py
demo/scenarios/api-vs-file-rest/: demo_data.py  scenario.py
demo/scenarios/api-vs-file-rest-cases/: auth.py  demo_data.py  scenario.py
demo/scenarios/api-vs-file-soap/: env.py  scenario.py
demo/scenarios/db-comparison-transformations/: demo_data.py  scenario.py
demo/scenarios/db-vs-api-graphql/: demo_data.py  scenario.py
demo/scenarios/db-vs-api-rest/: scenario.py
demo/scenarios/db-vs-api-soap/: demo_data.py  scenario.py
demo/scenarios/db-vs-db-cross-dialect/: demo_data.py  scenario.py
demo/scenarios/db-vs-db-sqlite/: demo_data.py  scenario.py
demo/scenarios/nosql-vs-nosql/: demo_data.py  scenario.py
demo/scenarios/project-db/: README.md  scenario.py  warehouse_seed.py  warehouse_table_manifest.py
demo/scenarios/project-graphql/: README.md  auth.py  demo_data.py  env.py  scenario.py
demo/scenarios/reconcile-combined-options/: scenario.py
demo/scenarios/reconcile-data-mapping-function/: scenario.py
demo/scenarios/reconcile-ignore-fields/: scenario.py
demo/scenarios/reconcile-transformations/: scenario.py
demo/scenarios/snapline-combined-options/: scenario.py
demo/scenarios/snapline-data-mapping-function/: demo_data.py  scenario.py
demo/scenarios/snapline-data-mapping-lookup/: demo_data.py  scenario.py
demo/scenarios/snapline-ignore-fields/: scenario.py
demo/scenarios/snapline-transformations/: demo_data.py  scenario.py
demo/scripts/: run_scenario.py  scaffold_scenarios.py  scenario_registry.py
demo/shared/: pyproject.toml
demo/shared/reconcile/demo_shared/: bootstrap_scenario.py  demo_domain.py  mock_server.py  module_dir.py  run_fixture_cases.py  sqlite_setup.py
demo/shared/snapline/demo_shared/: __init__.py  bootstrap_scenario.py  constants.py  graphql_schema.py  mock_server.py  project_graphql_schema.py  report_config.py  run_fixture_cases.py  scenario_registry.py  sqlite_connection.py  sqlite_setup.py  stub_db.py  types.py
docs/: README.md  architecture.html  demos.html  getting-started.html  guide.html  index.html  reference.html
scripts/: sync_versions.py
tests/: test_reconcile.py  test_redact_fields.py  test_safe_path.py  test_safe_url.py  test_snapline.py  test_xml_utils.py
