[project]
name = "snapline-workspace"
version = "0.1.10"
description = "Snapline — declarative snapshot and reconciliation testing (Python monorepo)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VaagaTech", email = "info@vaagatech.com" }]

[tool.uv.workspace]
members = [
    "packages/snapline_engine",
    "packages/snapline_api_adapters",
    "packages/snapline_auth_adapters",
    "packages/snapline_core",
    "demo/shared",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[project.scripts]
snapline-demo = "run_all:main"
