[project]
name = "snapline-workspace"
version = "0.2.6"
description = "Snapline — declarative snapshot and reconciliation testing (Python monorepo)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VaagaTech", email = "info@vaagatech.com" }]

[project.urls]
Documentation = "https://vaagatech.github.io/snapline-python/"
Repository = "https://github.com/vaagatech/snapline-python"
Issues = "https://github.com/vaagatech/snapline-python/issues"

[tool.uv.workspace]
members = [
    "packages/snapline_engine",
    "packages/snapline_api_adapters",
    "packages/snapline_auth_adapters",
    "packages/snapline_messaging_adapters",
    "packages/snapline_core",
    "demo/shared",
]

[dependency-groups]
dev = ["pytest>=8.0", "graphql-core>=3.2.0"]

[tool.pyright]
pythonVersion = "3.10"
include = ["packages", "demo", "tests"]
extraPaths = [
    "packages/snapline_core",
    "packages/snapline_engine",
    "packages/snapline_api_adapters",
    "packages/snapline_auth_adapters",
    "packages/snapline_messaging_adapters",
    "demo/shared",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [
  "packages/snapline_core",
  "packages/snapline_engine",
  "packages/snapline_api_adapters",
  "packages/snapline_auth_adapters",
  "packages/snapline_messaging_adapters",
  "demo/shared",
]

[project.scripts]
snapline-demo = "run_demo:main"

[tool.uv.scripts]
demo = "python demo/run_all/run_all.py"
demo-list = "python demo/scripts/run_scenario.py --list"
demo-run = "python demo/scripts/run_scenario.py"
demo-all = "python demo/run_all/run_all.py"
