[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapline-demo-shared"
version = "0.2.3"
description = "Shared demo utilities for Snapline Python demos"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VaagaTech", email = "info@vaagatech.com" }]
dependencies = [
    "snapline-core==0.2.3",
    "graphql-core>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["snapline"]
